# cookiecutter-data-science

{{ cookiecutter.repo_name }}/: Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
{{ cookiecutter.repo_name }}/tests/: test_basic.py
