[metadata]
name = {{ cookiecutter.project_name }}
description = {{ cookiecutter.description }}
author = {{ cookiecutter.author_name }}
classifiers = 
    Programming Language :: Python :: 3
license = {% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %}
    
[options]
packages =
    {{ cookiecutter.repo_name }}
install_requires = 
    requests>=2
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no  

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    
[options.package_data]
{{ cookiecutter.repo_name }} = py.typed

[flake8]
max-line-length = 160